src/Component/SideMenu/SideMenu.css
@import url(../../Global/Spacing.css);
@import url(../../Global/Colors.css);

.SideMenuContainer {
    display: flex;
    flex-direction: column;
    height: 100%;
    background-color: var(--primary-bg-color);
    border-right-style: solid;
    border-right-color: var(--border-color);
    border-right-width: 1px;
}

.NoteListContainer {
    width: 100%;
}

.NoteItem {
    width: 100%;
    height: 40px;
    background-color: inherit;
    padding-left: var(--horizontial-padding);
    padding-right: var(--horizontial-padding);
    padding-top: 8px;
    border-bottom-style: solid;
    border-bottom-color: var(--border-color);
    border-bottom-width: 1px;
    font-size: large;
    color: var(--primary-text-color);
    cursor: pointer;
    display: flex;
}

.NoteTitle {
    flex-grow: 1;
}

.DeleteButton:hover {
    color: red;
}

.CreateItemContainer {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.EmptySpace {
    flex: 1;
}

.CreateNewItem {
    bottom: 0;
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: var(--border-color);
    border-bottom-style: none;
    background-color: Brown;
}

.NoteTitle:hover, .Selected {
    font-weight: bolder;
    color: yellow;
}

.CreateNewItem:hover {
    background-color: green;
}

